--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "ng2-lazy-trumbowyg",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Angular 2 Component for lazy loading of Trumbowyg wysiwyg editor",
   "main": "index.js",
   "scripts": {
     "tsc": "tsc"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.4",
-    "rxjs": "5.0.0-beta.6",
-    "loadjs": "2.1.1"
+    "rxjs": "~5.0.1",
+    "loadjs": "~3.3.1"
   },
   "devDependencies": {
-    "typescript": "~1.8.10",
-    "typings": "~1.3.0"
+    "@angular/common": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@types/core-js": "^0.9.35",
+    "typescript": "~2.0.10",
+    "zone.js": "~0.7.2"
   },
   "repository": {
     "type": "git",
