remove loadjs dependency, used AOT compiler, angular-cli bug fix

--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "ng2-lazy-trumbowyg",
-  "version": "2.0.3",
+  "version": "2.2.0",
   "description": "Angular 2 Component for lazy loading of Trumbowyg wysiwyg editor",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc"
+    "transpile": "ngc",
+    "package": "rollup -c",
+    "minify": "uglifyjs dist/bundles/trumbowyg.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/trumbowyg.umd.min.js",
+    "build": "npm run transpile && npm run package && npm run minify"
   },
   "dependencies": {
-    "rxjs": "~5.0.1",
-    "loadjs": "~3.3.1"
+    "@angular/core": "^2.4.0",
+    "rxjs": "~5.0.1"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/compiler-cli": "^2.4.0",
     "@angular/core": "^2.4.0",
-    "@types/core-js": "^0.9.35",
-    "typescript": "~2.0.10",
-    "zone.js": "~0.7.2"
+    "rollup": "^0.41.6",
+    "typescript": "^2.0.10",
+    "uglify-js": "^2.8.21",
+    "zone.js": "^0.7.2"
   },
   "repository": {
     "type": "git",
