--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,34 @@
 {
+
   "compilerOptions": {
-    "target": "es5",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "noImplicitAny": true,
+    "baseUrl": ".",
     "declaration": true,
+    "stripInternal": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "module": "es2015",
+    "moduleResolution": "node",
+    "paths": {
+      "@angular/core": ["node_modules/@angular/core"],
+      "rxjs/*": ["node_modules/rxjs/*"]
+    },
     "rootDir": ".",
-    "types": [
-      "core-js"
-    ]
+    "outDir": "dist",
+    "sourceMap": true,
+    "inlineSources": true,
+    "target": "es5",
+    "skipLibCheck": true,
+    "lib": [
+      "es2015", "dom"
+    ],
+    "suppressImplicitAnyIndexErrors": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
   "files": [
-    "index.ts",
-    "src/trumbowyg.component.ts",
-    "src/trumbowyg.service.ts"
+    "index.ts"
   ],
-  "compileOnSave": false,
-  "buildOnSave": false
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true
+  }
 }
