--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-lazy-trumbowyg",
-  "version": "2.3.0",
+  "version": "2.3.2",
   "description": "Angular 2 Component for lazy loading of Trumbowyg wysiwyg editor",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "build": "npm run transpile && npm run package && npm run minify"
   },
   "dependencies": {
-    "rxjs": "~5.0.1"
+    "rxjs": ">=5.0.1"
   },
   "devDependencies": {
     "@angular/core": "^2.4.0",
